--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -1,43 +1,37 @@
 ﻿{
-  "configurations": [
-    {
-      "name": "x64-Release-With-Symbols",
-      "generator": "Ninja",
-      "configurationType": "RelWithDebInfo",
-      "inheritEnvironments": [
-        "msvc_x64_x64"
-      ],
-      "buildRoot": "${workspaceRoot}\\Build",
-      "installRoot": "${workspaceRoot}\\Install",
-      "cmakeCommandArgs": "",
-      "buildCommandArgs": "-v",
-      "ctestCommandArgs": ""
-    },
-    {
-      "name": "x64-Release",
-      "generator": "Ninja",
-      "configurationType": "Release",
-      "inheritEnvironments": [
-        "msvc_x64_x64"
-      ],
-      "buildRoot": "${workspaceRoot}\\Build",
-      "installRoot": "${workspaceRoot}\\Install",
-      "cmakeCommandArgs": "",
-      "buildCommandArgs": "-v",
-      "ctestCommandArgs": ""
-    },
-    {
-      "name": "x64-Debug",
-      "generator": "Ninja",
-      "configurationType": "Debug",
-      "inheritEnvironments": [
-        "msvc_x64_x64"
-      ],
-      "buildRoot": "${workspaceRoot}\\Build",
-      "installRoot": "${workspaceRoot}\\Install",
-      "cmakeCommandArgs": "",
-      "buildCommandArgs": "-v",
-      "ctestCommandArgs": ""
-    }
-  ]
+    "configurations": [
+        {
+            "name": "x64-Release-With-Symbols",
+            "generator": "Ninja",
+            "configurationType": "RelWithDebInfo",
+            "inheritEnvironments": [ "msvc_x64_x64" ],
+            "buildRoot": "${workspaceRoot}\\Build\\Release-With-Symbols",
+            "installRoot": "${workspaceRoot}\\Install",
+            "cmakeCommandArgs": "",
+            "buildCommandArgs": "-v",
+            "ctestCommandArgs": ""
+        },
+        {
+            "name": "x64-Release",
+            "generator": "Ninja",
+            "configurationType": "Release",
+            "inheritEnvironments": [ "msvc_x64_x64" ],
+            "buildRoot": "${workspaceRoot}\\Build\\Release",
+            "installRoot": "${workspaceRoot}\\Install",
+            "cmakeCommandArgs": "",
+            "buildCommandArgs": "-v",
+            "ctestCommandArgs": ""
+        },
+        {
+            "name": "x64-Debug",
+            "generator": "Ninja",
+            "configurationType": "Debug",
+            "inheritEnvironments": [ "msvc_x64_x64" ],
+            "buildRoot": "${workspaceRoot}\\Build\\Debug",
+            "installRoot": "${workspaceRoot}\\Install",
+            "cmakeCommandArgs": "",
+            "buildCommandArgs": "-v",
+            "ctestCommandArgs": ""
+        }
+    ]
 }
