--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,5 +9,6 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 # Libs and exe
-add_subdirectory(Source)
-add_subdirectory(Source/Tests)
+add_subdirectory(Include)
+add_subdirectory(Examples)
+add_subdirectory(Tests)
